# VSCode_Cpp_Configuration

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: GitCommitGuidelines.md  GitHooksSetup.md
examples/: CMakeLists.txt  basic_usage.cpp
include/: export.h  pch.h  version.h
include/module2/: module2.h
scripts/: build.sh  commit-msg  install-hooks.sh  validate-commit-msg.sh
src/: CMakeLists.txt  main.cpp
src/module1/: module1.cpp  module1.h
src/module2/: module2.cpp  module2.h
tests/: CMakeLists.txt  main.cpp  module1_test.cpp  module2_test.cpp
